{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 12,
  "lineage": "74ba9998-ef6b-60e0-8af6-430ab8672c59",
  "resources": [
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-11-06T02:54:41.705-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/amazing-autumn-440715-d4/global/firewalls/development-allow-egress",
            "log_config": [],
            "name": "development-allow-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/global/networks/development-network",
            "priority": 1000,
            "project": "amazing-autumn-440715-d4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/global/firewalls/development-allow-egress",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-06T02:54:41.846-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/amazing-autumn-440715-d4/global/firewalls/development-allow-ssh",
            "log_config": [],
            "name": "development-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/global/networks/development-network",
            "priority": 1000,
            "project": "amazing-autumn-440715-d4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/global/firewalls/development-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "vm-1",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240927",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/zones/us-central1-a/disks/development-private-instance-vm-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/amazing-autumn-440715-d4/zones/us-central1-a/instances/development-private-instance-vm-1",
            "instance_id": "9086246984180234434",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIONCBe2lynScIR9VDqRMhb6jbaQYY+zPTx+rvk0jEfTD m.h.azaddel@gmail.com"
            },
            "metadata_fingerprint": "zK-qFsMZQZ4=",
            "name": "development-private-instance-vm-1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/global/networks/development-network",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/regions/us-central1/subnetworks/development-private-subnet",
                "subnetwork_project": "amazing-autumn-440715-d4"
              }
            ],
            "project": "amazing-autumn-440715-d4",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/zones/us-central1-a/instances/development-private-instance-vm-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "private",
              "vm-1"
            ],
            "tags_fingerprint": "R2FT951gWcU=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.subnets.google_compute_network.vpc_network",
            "module.subnets.google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "vm-0",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240927",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/zones/us-central1-a/disks/development-public-instance-vm-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/amazing-autumn-440715-d4/zones/us-central1-a/instances/development-public-instance-vm-0",
            "instance_id": "8135717043074169026",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIONCBe2lynScIR9VDqRMhb6jbaQYY+zPTx+rvk0jEfTD m.h.azaddel@gmail.com"
            },
            "metadata_fingerprint": "zK-qFsMZQZ4=",
            "name": "development-public-instance-vm-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.57.72.132",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/global/networks/development-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/regions/us-central1/subnetworks/development-public-subnet",
                "subnetwork_project": "amazing-autumn-440715-d4"
              }
            ],
            "project": "amazing-autumn-440715-d4",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/zones/us-central1-a/instances/development-public-instance-vm-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "public",
              "vm-0"
            ],
            "tags_fingerprint": "zTmcSYYKHIE=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.subnets.google_compute_network.vpc_network",
            "module.subnets.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/amazing-autumn-440715-d4/global/networks/development-network",
            "mtu": 0,
            "name": "development-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "amazing-autumn-440715-d4",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/global/networks/development-network"
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-06T02:33:56.435-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/amazing-autumn-440715-d4/regions/us-central1/routers/development-nat-router",
            "name": "development-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/global/networks/development-network",
            "project": "amazing-autumn-440715-d4",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/regions/us-central1/routers/development-nat-router"
          },
          "dependencies": [
            "module.subnets.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "cloud_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "amazing-autumn-440715-d4/us-central1/development-nat-router/development-cloud-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "development-cloud-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "amazing-autumn-440715-d4",
            "region": "us-central1",
            "router": "development-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/regions/us-central1/subnetworks/development-private-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.subnets.google_compute_network.vpc_network",
            "module.subnets.google_compute_router.nat_router",
            "module.subnets.google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-06T02:33:56.491-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/amazing-autumn-440715-d4/regions/us-central1/subnetworks/development-private-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "development-private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/global/networks/development-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "amazing-autumn-440715-d4",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/regions/us-central1/subnetworks/development-private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.subnets.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-06T02:33:56.675-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/amazing-autumn-440715-d4/regions/us-central1/subnetworks/development-public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "development-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/global/networks/development-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "amazing-autumn-440715-d4",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amazing-autumn-440715-d4/regions/us-central1/subnetworks/development-public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.subnets.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}